--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ edition = "2024"
 version = "0.1.0"
 
 [dependencies]
+clap = { version = "4.5.55", features = ["derive"] }
+crossterm = "0.29.0"
 thiserror = "2"
 miette = { version = "7.6.0", features = ["fancy"] }
 serde = { version = "1", features = ["derive"] }
-crossterm = "0.29.0"
 
 timely = "0.25.1"
 differential-dataflow = "0.18.0"
